<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Merqurius</string>
    <string name="BookDetails">Book Details</string>
    <string name="action_settings">Settings</string>
    <string name="bookdetails_title">Title:</string>
    <string name="bookdetails_author">Author:</string>
    <string name="bookdetails_collection">Collection:</string>
    <string name="bookdetails_isbn">ISBN:</string>
    <string name="home_app_name">Merqurius</string>
    <string name="home_titleLine1">Welcome to</string>
    <string name="home_button_collections">View My Collections</string>
    <string name="home_button_scanBook">Scan a New Book</string>
    <string name="home_button_searchBook">Search Books Online</string>
    <string name="home_button_settings">Search My Books</string>
    <string name="home_titleLine2">Your personal library manager</string>
    <string name="home_appDescription">The title of the application</string>
    <string name="author_text">Author...</string>
    <string name="title_text">Title...</string>
    <string name="genre_text">Subject...</string>
    <string name="isbn_text">ISBN...</string>
    <string name="button_send">     Search     </string>
    <string name="title_activity_base">baseActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_email_screen">EmailScreen</string>
    <string name="email_hint">somebody@email.com</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_activity_scan">activity_scan</string>

</resources>
