<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#f1f1f1f1"
    android:clickable="false"
    android:id="@+id/">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_collections"
        android:id="@+id/buttonGoToLibrary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonScanBook"
        android:background="#ffffa544"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:height="60dp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_scanBook"
        android:id="@+id/buttonScanBook"
        android:layout_above="@+id/buttonSearchBook"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonGoToLibrary"
        android:layout_alignEnd="@+id/buttonGoToLibrary"
        android:background="#ffffa544"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:height="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_searchBook"
        android:id="@+id/buttonSearchBook"
        android:layout_above="@+id/buttonDetails"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffa544"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:height="60dp"
        android:clickable="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_settings"
        android:id="@+id/buttonDetails"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonSearchBook"
        android:layout_alignEnd="@+id/buttonSearchBook"
        android:background="#ffffa544"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:height="60dp"
        android:clickable="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_titleLine2"
        android:id="@+id/title_line2"
        android:textColor="#ff000000"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:layout_above="@+id/buttonGoToLibrary"
        android:layout_marginBottom="39dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="@dimen/activity_horizontal_margin" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:src="@drawable/app_title"
        android:contentDescription="@string/home_appDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#f1f1f1f1"
        android:layout_above="@+id/title_line2" />

</RelativeLayout>
