<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/bookshelf_frost3">
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1"
            android:shrinkColumns="1"
            tools:context=".BookDetails"
            android:id="@+id/detailScreen">

        <TableRow
            android:gravity="center_horizontal|center_vertical" >
            <ImageView
                android:layout_width="125dp"
                android:layout_height="200dp"
                android:id="@+id/bookCover"
                android:src="@drawable/generic_book_cover" android:scaleType="fitXY" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content">
            <TextView
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bookdetails_title"
                android:textColor="@android:color/white"
                android:id="@+id/bookTitle"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Catch-22"
                android:id="@+id/titleText"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bookdetails_author"
                android:textColor="@android:color/white"
                android:id="@+id/bookAuthor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Joseph Heller"
                android:id="@+id/authorText"
                android:textColor="@android:color/white"
                android:gravity="right"
                android:padding="3dip"
                android:textStyle="bold" />
        </TableRow>

            <TableRow>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Published:"
                    android:textColor="@android:color/white"
                    android:id="@+id/bookPublished"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="1961"
                    android:id="@+id/PublishedText"
                    android:textColor="@android:color/white"
                    android:gravity="right"
                    android:padding="3dip"
                    android:textStyle="bold" />
            </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bookdetails_collection"
                android:textColor="@android:color/white"
                android:id="@+id/collectionTag"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Placeholder Collection"
                android:gravity="right"
                android:padding="3dip"
                android:id="@+id/collectionText"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bookdetails_isbn"
                android:textColor="@android:color/white"
                android:id="@+id/bookIsbn"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="978-1451626650"
                android:id="@+id/isbnText"
                android:textColor="@android:color/white"
                android:gravity="right"
                android:padding="3dip"
                android:textStyle="bold" />
        </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Loaned to:"
                    android:textColor="@android:color/white"
                    android:id="@+id/loanedTitle"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="3dip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Placeholder Name"
                    android:id="@+id/loanedName"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>
            <Space
                android:layout_width="1dp"
                android:layout_height="30dp" />
            <TableRow
                android:gravity="center_horizontal|center_vertical" >
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Start/End Loan"
                    android:id="@+id/buttonLoan"
                    android:clickable="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Remind Friend"
                    android:id="@+id/buttonRemind"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
            android:gravity="center_horizontal|center_vertical" >
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Change Collection"
                    android:id="@+id/buttonCollection"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="View Description"
                    android:id="@+id/buttonDescription"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>



        </TableLayout>
    </ScrollView>
</LinearLayout>